# texcord

./: .gitignore  README.md  pyproject.toml
texcord/: main.py
texcord/slash/: tex.py
