[tool.poetry]
name = "texcord"
version = "0.1.0"
description = ""
authors = ["Krishnan Shankar <krishnans2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "^2.6.1"
requests = "^2.32.3"
sympy = "^1.13.3"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[tool.black]
line-length = 100
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
